--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a><br />
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a><br />
         </address>
         <p>
         <h1>Effective Solutions
