--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header>
-        <a href="#"><img src="/images/Logo.svg" alt="logo" /></a>
+        
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
                     <a href="#studio">Studio</a>
@@ -25,36 +26,44 @@
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a><br />
+            <ul>
+                <li> 
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
-        <p>
-        <h1>Effective Solutions
-            for Your Business</h1>
-        <button type="button">Order Service</button>
-        </p>
+        
     </header>
     <main>
         <div>
+        <h1>Effective Solutions
+            for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+        </div>
+        <div>
             <ul>
                 <li>
-                    <h4>Strategy</h4>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h4>Punctuality</h4>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h4>Diligence</h4>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h4>Technologies</h4>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
                     </p>
@@ -73,30 +82,30 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img.jpg" alt="photo of Mark Guerrero" width="260" height="260">
-                    <p>Mark Guerrero</p>
+                    <img src="./images/img.jpg" alt="photo of Mark Guerrero" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img (1).jpg" alt="photo of Tom Ford" width="260" height="260">
-                    <p>Tom Ford</p>
+                    <img src="./images/img (1).jpg" alt="photo of Tom Ford" width="264" height="260">
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img (2).jpg" alt="photo of Camila Garcia" width="260" height="260">
-                    <p>Camila Garcia</p>
+                    <img src="./images/img (2).jpg" alt="photo of Camila Garcia" width="264" height="260">
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img (3).jpg" alt="photo of Daniel Wilson" width="260" height="260">
-                    <p>Daniel Wilson</p>
+                    <img src="./images/img (3).jpg" alt="photo of Daniel Wilson" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </div>
     </main>
     <footer>
-        <a href="#"><img src="/images/Logo.svg" alt="logo" /></a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
