--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         
     </header>
     <main>
-        <div>
+        <section>
         <h1>Effective Solutions
             for Your Business
         </h1>
         <button type="button">Order Service</button>
-        </div>
-        <div>
+        </section>
+        <section>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -69,16 +69,16 @@
                     </p>
                 </li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>What are we doing</h2>
             <ul>
                 <li><img src="./images/img 1.jpg" alt="monitor of PC" width="360" height="300"></li>
                 <li><img src="./images/img 2.jpg" alt="phone screen" width="360" height="300"></li>
                 <li><img src="./images/img 3.jpg" alt="screen laptop and phone" width="360" height="300"></li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -102,7 +102,7 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
-        </div>
+        </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
