--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <button type="button">Order Service</button>
         </section>
         <section>
+            <h2 hidden>Features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -73,9 +74,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/img 1.jpg" alt="monitor of PC" width="360" height="300"></li>
-                <li><img src="./images/img 2.jpg" alt="phone screen" width="360" height="300"></li>
-                <li><img src="./images/img 3.jpg" alt="screen laptop and phone" width="360" height="300"></li>
+                <li><img src="./images/img_1.jpg" alt="monitor of PC" width="360" height="300"></li>
+                <li><img src="./images/img_2.jpg" alt="phone screen" width="360" height="300"></li>
+                <li><img src="./images/img_3.jpg" alt="screen laptop and phone" width="360" height="300"></li>
             </ul>
         </section>
         <section>
@@ -87,17 +88,17 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img (1).jpg" alt="photo of Tom Ford" width="264" height="260">
+                    <img src="./images/img_12.jpg" alt="photo of Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img (2).jpg" alt="photo of Camila Garcia" width="264" height="260">
+                    <img src="./images/img_22.jpg" alt="photo of Camila Garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img (3).jpg" alt="photo of Daniel Wilson" width="264" height="260">
+                    <img src="./images/img_23.jpg" alt="photo of Daniel Wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
